--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,5 @@
+/* Start History */
+
 /*-----------------------------------------------------------------------
 01. START APP FONTS
 -----------------------------------------------------------------------*/
