--- a/resources/style.css
+++ b/resources/style.css
@@ -368,7 +368,8 @@ table.dataTable tbody td {
 
 /* Table white Spcee */
 .dataTables_wrapper {
-    margin: 30px 20px;
+    margin: 30px 0px;
+    position: relative;
 }
 
 /* search box style */
