add clean teble 2 alert

--- a/resources/style.css
+++ b/resources/style.css
@@ -97,29 +97,6 @@
 -----------------------------------------------------------------------*/
 
 /*-----------------------------------------------------------------------
-  AHMED4CSS entered
------------------------------------------------------------------------*/
-/* table options stuff */
-.settings {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 10px;
-}
-
-.settings label  { 
-    text-align:left; 
-}
-
-input {
-  text-align: center
-}
-
-/*-----------------------------------------------------------------------
-  AHMED4CSS exits
------------------------------------------------------------------------*/
-
-/*-----------------------------------------------------------------------
   02. START GENERAL STYLES
 -----------------------------------------------------------------------*/
 
@@ -446,7 +423,8 @@ table.dataTable tbody td {
 
 /* For just Center ( Remove Button ) HADADAY */
 #section2 .r_b_s {
-
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
 }
 
 /*-----------------------------------------------------------------------
@@ -642,4 +620,41 @@ input:focus {
 
 /*-----------------------------------------------------------------------
 08. END SETTING TAB 
+-----------------------------------------------------------------------*/
+
+/*-----------------------------------------------------------------------
+09. START ALERTS
+-----------------------------------------------------------------------*/
+
+.swal-modal {
+    background-color: #fff;
+    border-radius: 0;
+}
+
+/*-----------------------------------------------------------------------
+09. END ALERTS
+-----------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------
+  AHMED4CSS entered
+-----------------------------------------------------------------------*/
+/* table options stuff */
+.settings {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 10px;
+}
+
+.settings label  { 
+    text-align:left; 
+}
+
+input {
+  text-align: center
+}
+
+/*-----------------------------------------------------------------------
+  AHMED4CSS exits
 -----------------------------------------------------------------------*/
