--- a/resources/style.css
+++ b/resources/style.css
@@ -345,8 +345,7 @@ table.dataTable tbody td {
 
 /* Table white Spcee */
 .dataTables_wrapper {
-    margin: 30px 0px;
-    position: relative;
+    margin: 30px 5px 30px 5px;
 }
 
 /* search box style */
@@ -438,12 +437,11 @@ table.dataTable tbody td {
 .zoomer {
     background: #f7f7f8;
     border: 1px solid #dee2e6;
-    height: 461px;
+    height: 525px;
     overflow: hidden;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px 10px -50px 10px;
 }
+
 /* The Zooming img tab Two Buttons */
 .btn_2 {
 	border: none;
@@ -648,7 +646,7 @@ input:focus {
 }
 
 .settings label  { 
-    text-align:left; 
+    margin-left: 5px;
 }
 
 input {
