--- a/resources/style.css
+++ b/resources/style.css
@@ -146,7 +146,7 @@ th {
 
 #section1 {
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
     height: 100%;
 }
 
@@ -340,9 +340,6 @@ table.dataTable {
     color: #183a56;
 }
 
-table.dataTable tbody td {
-    vertical-align: middle;
-}
 
 /* Table white Spcee */
 .dataTables_wrapper {
@@ -369,7 +366,7 @@ table.dataTable tbody td {
 
 table.dataTable tbody td {
     word-break: break-all;
-    vertical-align: top;
+    vertical-align: middle;
 }
 /*-----------------------------------------------------------------------
 05. END FULL TABLE
