--- a/resources/style.css
+++ b/resources/style.css
@@ -1,31 +1,3 @@
-/* this code works but it's somehow shitty  */
-
-#Tap3_loader_container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
-
-.Tap3_loader {
-    background: url("./zloader.gif") no-repeat center center;
-
-    margin: -100px 0 0 0;
-    height: 100%;
-}
-#Tap3_loader_text {
-    position: relative;
-    font-size: 50px;
-    text-align: center;
-    margin: -300px 0 0 0;
-    height: 100%;
-}
-
-
-
-
-
 /*-----------------------------------------------------------------------
 01. START APP FONTS
 -----------------------------------------------------------------------*/
@@ -429,8 +401,54 @@ table.dataTable tbody td {
     height: 95%;
     overflow: hidden;
     margin: 10px 10px -50px 10px;
-    background-image: url("paper.gif");
 }
+
+/* txt before result */ 
+.not_yet {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.not_yet h1 {
+    font-weight: 600;
+    font-size: 30px;
+}
+
+/* Result lodaer */
+#Tap3_loader_container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.Tap3_loader {
+    height: 70px;
+    width: 70px;
+    margin: 0 auto 30px auto;
+    border-radius: 50%;
+    border: 5px solid #183a563f;
+    border-top: 5px solid #0db379;
+    -webkit-animation: spinner 1s infinite linear;
+                animation: spinner 1s infinite linear;
+}
+
+@-webkit-keyframes spinner {
+    to {
+      -webkit-transform: rotateZ(360deg);
+                transform: rotateZ(360deg);
+    }
+}
+  
+@keyframes spinner {
+    to {
+      -webkit-transform: rotateZ(360deg);
+                transform: rotateZ(360deg);
+    }
+}
+
 
 /* The Zooming img tab Two Buttons */
 .btn_2 {
