slight edit to settings/css file

--- a/settings_TEMAPLE/style.css
+++ b/settings_TEMAPLE/style.css
@@ -195,5 +195,10 @@ p {
   border-color: transparent;
 }
 
+/* you lied to my, bitch. */
+select {
+  text-align: center;
+  text-align-last: center;
+}
 
 
