--- a/settings_TEMAPLE/style.css
+++ b/settings_TEMAPLE/style.css
@@ -11,13 +11,14 @@ html, body {
 body {
   font-size: 1.6rem;
   font-family: 'Heebo', system-ui;
-  text-shadow: 0px 1px 1px #7059e2;
+  text-shadow: 0px 1px 1px #17cc8e;
 }
 
 
 
 
 h1 {
+    width:100%;
   margin: 0;
  direction: rtl;
 
@@ -33,6 +34,13 @@ p {
   margin-bottom: 2rem;
 }
 
+
+.line {
+    width: 100%;
+    height: 1px;
+    background: lightgrey;
+}
+
 .wrapper {
   margin: 4.5rem 1rem 0;
 }
@@ -42,7 +50,7 @@ p {
   width: 100%;
   margin: auto;
   max-width: 1200px;
-  background: #9c88ff;
+  background: white;
   color: black;
   border-radius: .8rem;
   margin-bottom: 2rem;
@@ -131,7 +139,7 @@ p {
 .toggle {
   max-width: 62px;
   height: 32px;
-  background: #7059e2;
+  background: #17cc8e;
   border-radius: 999px;
   position: relative;
   -webkit-transition: all 300ms ease;
@@ -153,25 +161,26 @@ p {
   transition: all 300ms ease;
 }
 .toggle.is-on {
-  background: white;
+  background: lightgrey;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 .toggle.is-on .toggle__handle {
   left: 34px;
-  background: #9c88ff;
+  background: white;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
 
 .form-item {
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
           align-items: center;
-  margin-bottom: 1.5rem;
   flex-wrap: wrap;
 }
 .form-item__control {
@@ -182,17 +191,29 @@ p {
 .control, input {
   height: 35px;
   text-align: center;
-  background: transparent;
+  background: white;
   color: inherit;
   display: block;
   width: 100%;
   padding: 0px;
   border-radius: .3rem;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid darkgrey;
 }
 .control:hover, .control:focus {
-  background: #7059e2;
+  background: #17cc8e;
   border-color: transparent;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+    -webkit-appearance: none;
+    rder-radius: 0px;
+    border: none;
+	padding: 0;
+}
+
+.saveBtn {
+    text-align: center;
+    margin-top: 30px;
 }
 
 /* you lied to my, bitch. */
