--- a/settings_TEMAPLE/style.css
+++ b/settings_TEMAPLE/style.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css?family=Heebo:400,700");
 
 
-
 html, body {
   width: 100%;
   height: 100%;
@@ -10,11 +9,9 @@ html, body {
 
 body {
   font-size: 1.6rem;
-  font-family: 'Heebo', system-ui;
+  font-family: 'cairo';
   text-shadow: 0px 1px 1px #17cc8e;
 }
-
-
 
 
 h1 {
