--- a/settings_TEMAPLE/style.css
+++ b/settings_TEMAPLE/style.css
@@ -38,8 +38,6 @@ h3 {
 
 /* container logged in */
 
-
-
 .container {
   display: -webkit-box;
   display: flex;
@@ -110,7 +108,7 @@ h3 {
     color: #183a56;
     position: relative;
     text-align: center;
-    top: 5px;
+    top: -5px;
 }
 
 /* input:: checkbox logged out */
@@ -131,7 +129,7 @@ h3 {
   text-align: right;
 }
 
-.control, input {
+.control, input.settingsInput {
   height: 40px;
   text-align: center;
   background: white;
@@ -149,7 +147,7 @@ h3 {
 
 /* input:: color picker logged in */
 
-input[type="color"] {
+input.settingsInput[type="color"] {
    -webkit-appearance: none;
     width: 100%;
     height: 40px;
@@ -159,10 +157,10 @@ input[type="color"] {
     overflow: hidden;
     box-shadow: 2px 2px 5px rgba(0,0,0,.1);
 }
-input[type="color"]::-webkit-color-swatch-wrapper {
+input.settingsInput[type="color"]::-webkit-color-swatch-wrapper {
     padding: 0;
 }
-input[type="color"]::-webkit-color-swatch {
+input.settingsInput[type="color"]::-webkit-color-swatch {
     border: none;
 }
 
