--- a/resources/style.css
+++ b/resources/style.css
@@ -798,7 +798,7 @@ input {
 
 /* disable text selection*/
 * {
-    user-select: none;
+    /*user-select: none; [Disabled] */ 
 }
 
 
@@ -958,3 +958,25 @@ END HELPER CLASSES
 }
 
 /* Images Zoom on table 1: out */
+
+
+
+/* table icons all rows, column 1 */
+
+.dynamic_lamp{        
+    background-color: lightgreen;
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    border-radius: 5px;
+    opacity: 0.8;
+}
+.static_lamp{        
+    background-color: yellow;
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    border-radius: 5px;
+    opacity: 0.5;
+}
+/*-----------------------------------*/
