--- a/resources/style.css
+++ b/resources/style.css
@@ -191,12 +191,14 @@ th {
     height: 100%;
 }
 
-.img {
-    max-width: 500px;
-    min-width: 300px;
-    height: auto;
 
+/* table 1 */
+#full_table img, #empty_table img {
+    max-width: 100%;
+    max-height: 100%;
 }
+
+
 
 /*-----------------------------------------------------------------------
 02. END GENERAL STYLES
@@ -367,7 +369,6 @@ th {
 
 /* center table content verticlly centered */
 table.dataTable tbody td, table.dataTable th.dt-center {
-    word-break: break-all;
     vertical-align: middle;
 }
 
